--- a/index.html
+++ b/index.html
@@ -2,12 +2,78 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/portfolio.css">
-	<script src="js/jquery.min.js"></script>
-	<script src="js/portfolio.js"></script>
+	<title>TICTACTOE</title>
+	<link rel="stylesheet" href="css/tictactoe.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='css/tictactoe.css'>
+	
 </head>
 <body>
-	<h1>My Portfolio</h1>
+
+
+<!-- TIC TAC TOE IMAGE -->
+
+<header><img src="http://i1341.photobucket.com/albums/o744/Kiahrm/Logotrans_zpsiawjqxat.png"/>
+</header>	
+
+
+<!-- START TABLE WITH X'S AND O'S -->
+  <div class ="table">
+	<table border="1">
+   <tr>
+       <td><!-- "A1" --></td>
+       <td><!-- "B1" --></td>
+       <td><!-- "C1" --></td>
+   </tr>
+   <tr>
+       <td><!-- "A2" --></td>
+       <td><!-- "B2" --></td>
+       <td><!-- "C2" --></td>
+   </tr>
+   <tr>
+       <td><!-- "A3" --></td>
+       <td><!-- "B3" --></td>
+       <td><!-- "C3" --></td>
+   </tr>
+</div>
+</div>
+<!-- END OF TABLE -->
+
+
+<!-- IMAGE WRAPPER -->
+    <div id="wrapper">
+  
+    <div class="newbox">
+    <img src="http://i1341.photobucket.com/albums/o744/Kiahrm/Player%20X_zpshmdjh9pq.png"></div>
+
+ 
+
+    <div class="newbox2">
+    <img src="http://i1341.photobucket.com/albums/o744/Kiahrm/Player%20O_zps9ip6g08x.png"></div>
+    <span class="stretch"></span>
+
+  </div>
+
+<!-- SCORE BOXES -->
+
+    <div class="playerXBox">
+    <p>0</p>
+    </div>
+    </div>
+
+    <div class ="player0Box">
+    <p>0</p>
+    </div>
+
+  </div>
+
+<!-- //RESET BUTTON -->
+
+<a id="reset" class="myButton">RESET</a>
+
+<!-- //END -->
+
+<script src="js/jquery.min.js"></script>
+<script src="js/tictactoe.js"></script>
+
 </body>
 </html>
