Included sounds, gifs and amended background sizing, fixed clicking

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>TICTACTOE</title>
   <link rel="stylesheet" href="css/tictactoeV2.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='css/tictactoeV2.css'>
-   <script>
-  $( document ).ready(function() {
-      console.log( "document loaded" );
-  });</script>
 </head>
+
+<body>
+
+<img src="http://i.giphy.com/26tPpJlUhX19Hq2ek.gif"></img>
 
 
 
@@ -21,7 +21,6 @@
 
 </div> 
 
-<!-- <img src="http://i.giphy.com/3o8dpbnc14CRK6wjjW.gif"/> -->
 
 <!-- IMAGE WRAPPER -->
 
